# wildlife_simulation

./: CMakeLists.txt  README.md
22101852_Bora_Haliloglu_hw3/: CreatureLibrary.cpp  CreatureLibrary.hpp  Creatures.cpp  Creatures.hpp  Food.cpp  Food.hpp  SimulationMgr.cpp  a.out  input.txt
wildlife_simulator/wildlife_simulator.xcodeproj/: project.pbxproj
wildlife_simulator/wildlife_simulator.xcodeproj/project.xcworkspace/xcuserdata/borahaliloglu.xcuserdatad/: UserInterfaceState.xcuserstate
wildlife_simulator/wildlife_simulator.xcodeproj/xcuserdata/borahaliloglu.xcuserdatad/xcschemes/: xcschememanagement.plist
